Initial work.